--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 </div>
             </div>
             <div class="hero-image">
-                <img src="images/hero.jpg" alt="TechySolutions Illustration" class="hero-img">
+                <img src="Images/hero.jpg" alt="TechySolutions Illustration" class="hero-img">
             </div>
         </div>
     </section>
@@ -83,7 +83,7 @@
                 <p>With years of experience in the industry, we've helped startups and enterprises alike transform their ideas into successful digital products.</p>
             </div>
             <div class="about-image">
-                <img src="images/about.jpg" alt="About" class="about-img">
+                <img src="Images/about.jpg" alt="About" class="about-img">
             </div>
         </div>
     </section>
